<resources>
    <string name="facebook_app_id" translatable="false">1549448915357105</string>
    <string name="app_name" translatable="false">RugbyPTY</string>
    <string name="app_scheme" translatable="false">rugbupty</string>
    <string name="app_host" translatable="false">app</string>
    <string name="web_scheme" translatable="false">http</string>
    <string name="web_host" translatable="false">rugbypty.com</string>
    <string name="web_news_path" translatable="false">/news/post</string>


    <string name="data_base_name" translatable="false"></string>
    <string name="data_base_models" translatable="false"></string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="drawer_news">Noticias</string>
    <string name="drawer_positions">Posiciones</string>
    <string name="drawer_fixtures">Calendarios</string>
    <string name="drawer_socials">Redes Sociales</string>
    <string name="drawer_facebook" translatable="false">Facebook</string>
    <string name="drawer_instagram" translatable="false">Instagram</string>
    <string name="drawer_notification">Notificaciones</string>
    <string name="drawer_suggestions">Sugerencias</string>
    <string name="drawer_faqs">Preguntas Frecuentes</string>
    <string name="drawer_about">Nosotros</string>


    <string name="expanded" translatable="false">expanded</string>
    <string name="original_height" translatable="false">original_height</string>
    <string name="spinner_adapter_first_item" translatable="false">spinner_adapter_first</string>

    <!-- Menu -->
    <string name="action_settings">Configuraciones</string>
    <string name="action_news_type_view" translatable="false">Type View</string>


    <!-- Exit Dialog -->
    <string name="yes">SI</string>
    <string name="no" translatable="false">NO</string>
    <string name="message">¿Seguro que quieres salir?</string>

    <string name="app_web" translatable="false">http://www.rugbypty.com</string>

    <!-- TeamsInTournament -->
    <string name="equipo">Equipo</string>
    <string name="gpe">G-P-E</string>
    <string name="pts" translatable="false">PTS</string>
    <string name="angle" translatable="false">angle</string>
    <string name="orderby_tries" translatable="false">Tries</string>
    <string name="orderby_tries_diference">Diferencia de Tries</string>
    <string name="orderby_conversion" translatable="false">Conversion</string>
    <string name="orderby_penals">Penales</string>
    <string name="orderby_name">Nombre</string>
    <string name="orderby_forfeit" translatable="false">Forfeit</string>
    <string name="orderby_game_draw">J. Empatados</string>

    <string name="orderby_asc" translatable="false">asc</string>
    <string name="orderby_desc" translatable="false">desc</string>


    <string name="proximamente">Próximamente</string>
    <string name="notifyme" translatable="false">Notificarme</string>
    <string name="not_news">No hay noticias</string>
    <string name="not_fixtures">No hay Calendario</string>

    <!-- Strings related to chat -->
    <string name="send" translatable="false">SEND</string>
    <string name="action_attach" translatable="false">ATTACH</string>
    <string name="action_capture" translatable="false">CAPTURE IMAGE</string>

    <string name="action_leave">Salir</string>
    <string name="action_send">Enviar</string>
    <string name="prompt_message">Mensaje</string>

    <string name="connect">Conectado</string>
    <string name="error_connect">Fallo al conectar</string>

    <!-- messages -->
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s se unio</string>
    <string name="message_user_left">%s salio</string>
    <string name="user_action_typing">esta escribiendo</string>

    <!-- Strings related to login -->
    <string name="prompt_username">¿Cuál es tu apodo?</string>
    <string name="action_sign_in">Unirse</string>
    <string name="action_sign_in_short">Unise</string>

    <string name="error_field_required">Campo requerido</string>

    <!-- Notifications -->
    <string name="no_message_text">No hay ningúna notificación</string>

    <string name="disconnect">Desconectado, revise su conexion a internet</string>
    <string name="message_welcome">Bienvenido</string>
    <string name="orderby_game_won">J. Ganados</string>
    <string name="orderby_game_played">J. Jugados</string>
    <string name="orderby_game_lost">J. Perdidos</string>
    <string name="orderby_points">Puntos</string>
    <string name="orderby_tries_against">T. en Contra</string>

    <string name="all">-- Todos --</string>

</resources>
