<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/skype"
    android:paddingBottom="12dp"
    android:paddingEnd="35dp"
    android:paddingRight="35dp"
    android:paddingTop="12dp"
    android:weightSum="2.0">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="start"
        android:paddingEnd="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingStart="11dp"
        android:text="@string/equipo"
        android:textAppearance="@style/TextAppearance.FreeSansBold"
        android:textColor="@color/blanco"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:gravity="center"
        android:paddingEnd="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingStart="11dp"
        android:text="@string/gpe"
        android:textAppearance="@style/TextAppearance.FreeSansBold"
        android:textColor="@color/blanco"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="center"
        android:paddingEnd="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingStart="11dp"
        android:text="@string/pts"
        android:textAppearance="@style/TextAppearance.FreeSansBold"
        android:textColor="@color/blanco"
        android:textSize="16sp" />
</LinearLayout>